# NativePreview

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/github/blizz2inght/nativepreview/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: frag_shader.glsl  vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/github/blizz2inght/nativepreview/: CameraController.java  MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/github/blizz2inght/nativepreview/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
libjpeg/: build.gradle
libjpeg/src/androidTest/java/com/github/blizz2night/libjpeg/: ExampleInstrumentedTest.java
libjpeg/src/main/: AndroidManifest.xml
libjpeg/src/main/cpp/: CMakeLists.txt  jpeg_utils_jni.cpp
libjpeg/src/main/cpp/libjpeg-turbo/: jconfigint.h
libjpeg/src/main/cpp/libjpeg-turbo/arm64-v8a/: jconfigint.h
libjpeg/src/main/cpp/libjpeg-turbo/armeabi-v7a/: jconfigint.h
libjpeg/src/main/java/com/github/blizz2night/libjpeg/: JpegUtils.java
libjpeg/src/main/res/raw/: sample_i420_220x220.yuv
libjpeg/src/test/java/com/github/blizz2night/libjpeg/: ExampleUnitTest.java
libyuv/: build.gradle
libyuv/src/androidTest/java/com/github/blizz2night/libyuv/: ExampleInstrumentedTest.java
libyuv/src/main/: AndroidManifest.xml
libyuv/src/main/cpp/: CMakeLists.txt  yuv_utils_jni.cpp
libyuv/src/main/java/com/github/blizz2night/libyuv/: YuvUtils.java
libyuv/src/test/java/com/github/blizz2night/libyuv/: ExampleUnitTest.java
